; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event_pluggable.c_my_winsock_register_wsaevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event_pluggable.c_my_winsock_register_wsaevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_event = type { i32*, i32 }
%struct.ub_event_base = type { i32 }

@UB_EVENT_MAGIC = common dso_local global i32 0, align 4
@default_event_vmt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ub_event* (%struct.ub_event_base*, i8*, void (i32, i16, i8*)*, i8*)* @my_winsock_register_wsaevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ub_event* @my_winsock_register_wsaevent(%struct.ub_event_base* %0, i8* %1, void (i32, i16, i8*)* %2, i8* %3) #0 {
  %5 = alloca %struct.ub_event_base*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca void (i32, i16, i8*)*, align 8
  %8 = alloca i8*, align 8
  store %struct.ub_event_base* %0, %struct.ub_event_base** %5, align 8
  store i8* %1, i8** %6, align 8
  store void (i32, i16, i8*)* %2, void (i32, i16, i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.ub_event_base*, %struct.ub_event_base** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load void (i32, i16, i8*)*, void (i32, i16, i8*)** %7, align 8
  %12 = load i8*, i8** %8, align 8
  ret %struct.ub_event* null
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
